force-app/main/default/objects/GTM_Config__c/GTM_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>GTM Config</label>
</CustomObject>