force-app/main/default/objects/GTM_Config__c/fields/GA4_Property_ID__c.field-meta.xml
<CustomField>
    <fullName>GA4_Property_ID__c</fullName>
    <label>GA4 Property ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>