force-app/main/default/objects/GTM_Config__c/fields/GTM_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>GTM_Account_ID__c</fullName>
    <label>GTM Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>