force-app/main/default/objects/GTM_Config__c/fields/LinkedIn_Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Partner_ID__c</fullName>
    <label>LinkedIn Partner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>