force-app/main/default/objects/GTM_Config__c/fields/Slack_Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Slack_Webhook_URL__c</fullName>
    <label>Slack Webhook URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>