force-app/main/default/objects/GTM_Config__c/fields/Snapchat_Pixel_ID__c.field-meta.xml
<CustomField>
    <fullName>Snapchat_Pixel_ID__c</fullName>
    <label>Snapchat Pixel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>