force-app/main/default/objects/GTM_Config__c/fields/TikTok_Pixel_ID__c.field-meta.xml
<CustomField>
    <fullName>TikTok_Pixel_ID__c</fullName>
    <label>TikTok Pixel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>